--- a/ml_deployment.ipynb
+++ b/ml_deployment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -118,8 +118,8 @@
      "text": [
       "Upload to S3 bucket successful!\n",
       "\n",
-      "trainpath = s3://ta-ml-deployment-sagemaker/sagemaker/iris_data/train-v-1.csv\n",
-      "testpath = s3://ta-ml-deployment-sagemaker/sagemaker/iris_data/test-v-1.csv\n"
+      "trainpath = s3://ta-ml-deployment-sagemaker/sagemaker/breast-cancer/train-v-1.csv\n",
+      "testpath = s3://ta-ml-deployment-sagemaker/sagemaker/breast-cancer/test-v-1.csv\n"
      ]
     }
    ],
@@ -153,14 +153,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing script.py\n"
+      "Overwriting script.py\n"
      ]
     }
    ],
@@ -229,9 +229,9 @@
     "    print(f\"Model path: {model_path}\")\n",
     "\n",
     "    y_pred = model.predict(X_test)\n",
-    "    acc = accuracy_score(y_test, y_pred, average='macro')\n",
-    "    precision = accuracy_score(y_test, y_pred, average='macro')\n",
-    "    recall = recall_score(y_test, y_pred, average='macro')\n",
+    "    acc = accuracy_score(y_test, y_pred)\n",
+    "    precision = accuracy_score(y_test, y_pred)\n",
+    "    recall = recall_score(y_test, y_pred)\n",
     "\n",
     "    print(\"[INFO] METRIC RESULTS ON TEST DATA\\n\")\n",
     "    print(f\"Test accuracy: {acc}\")\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,31 +268,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:sagemaker:Creating training-job with name: RF-custom-sklearn-2024-11-09-01-32-06-275\n"
+      "INFO:sagemaker:Creating training-job with name: RF-custom-sklearn-2024-11-12-04-14-58-968\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-11-09 01:32:08 Starting - Starting the training job...\n",
-      "2024-11-09 01:32:42 Downloading - Downloading input data...\n",
-      "2024-11-09 01:33:02 Downloading - Downloading the training image......\n",
-      "2024-11-09 01:34:03 Training - Training image download completed. Training in progress.\n",
-      "2024-11-09 01:34:03 Uploading - Uploading generated training model2024-11-09 01:33:58,975 sagemaker-containers INFO     Imported framework sagemaker_sklearn_container.training\n",
-      "2024-11-09 01:33:58,978 sagemaker-training-toolkit INFO     No GPUs detected (normal if no gpus installed)\n",
-      "2024-11-09 01:33:59,023 sagemaker_sklearn_container.training INFO     Invoking user training script.\n",
-      "2024-11-09 01:33:59,191 sagemaker-training-toolkit INFO     No GPUs detected (normal if no gpus installed)\n",
-      "2024-11-09 01:33:59,203 sagemaker-training-toolkit INFO     No GPUs detected (normal if no gpus installed)\n",
-      "2024-11-09 01:33:59,216 sagemaker-training-toolkit INFO     No GPUs detected (normal if no gpus installed)\n",
-      "2024-11-09 01:33:59,226 sagemaker-training-toolkit INFO     Invoking user script\n",
+      "2024-11-12 04:15:03 Starting - Starting the training job...\n",
+      "2024-11-12 04:15:17 Starting - Preparing the instances for training...\n",
+      "2024-11-12 04:15:59 Downloading - Downloading the training image.....2024-11-12 04:16:51,218 sagemaker-containers INFO     Imported framework sagemaker_sklearn_container.training\n",
+      "2024-11-12 04:16:51,222 sagemaker-training-toolkit INFO     No GPUs detected (normal if no gpus installed)\n",
+      "2024-11-12 04:16:51,269 sagemaker_sklearn_container.training INFO     Invoking user training script.\n",
+      "2024-11-12 04:16:51,458 sagemaker-training-toolkit INFO     No GPUs detected (normal if no gpus installed)\n",
+      "2024-11-12 04:16:51,472 sagemaker-training-toolkit INFO     No GPUs detected (normal if no gpus installed)\n",
+      "2024-11-12 04:16:51,485 sagemaker-training-toolkit INFO     No GPUs detected (normal if no gpus installed)\n",
+      "2024-11-12 04:16:51,494 sagemaker-training-toolkit INFO     Invoking user script\n",
       "Training Env:\n",
       "{\n",
       "    \"additional_framework_parameters\": {},\n",
@@ -324,11 +322,11 @@
       "    },\n",
       "    \"input_dir\": \"/opt/ml/input\",\n",
       "    \"is_master\": true,\n",
-      "    \"job_name\": \"RF-custom-sklearn-2024-11-09-01-32-06-275\",\n",
+      "    \"job_name\": \"RF-custom-sklearn-2024-11-12-04-14-58-968\",\n",
       "    \"log_level\": 20,\n",
       "    \"master_hostname\": \"algo-1\",\n",
       "    \"model_dir\": \"/opt/ml/model\",\n",
-      "    \"module_dir\": \"s3://sagemaker-us-east-2-361769570735/RF-custom-sklearn-2024-11-09-01-32-06-275/source/sourcedir.tar.gz\",\n",
+      "    \"module_dir\": \"s3://sagemaker-us-east-2-361769570735/RF-custom-sklearn-2024-11-12-04-14-58-968/source/sourcedir.tar.gz\",\n",
       "    \"module_name\": \"script\",\n",
       "    \"network_interface_name\": \"eth0\",\n",
       "    \"num_cpus\": 4,\n",
@@ -376,8 +374,8 @@
       "SM_NUM_CPUS=4\n",
       "SM_NUM_GPUS=0\n",
       "SM_MODEL_DIR=/opt/ml/model\n",
-      "SM_MODULE_DIR=s3://sagemaker-us-east-2-361769570735/RF-custom-sklearn-2024-11-09-01-32-06-275/source/sourcedir.tar.gz\n",
-      "SM_TRAINING_ENV={\"additional_framework_parameters\":{},\"channel_input_dirs\":{\"test\":\"/opt/ml/input/data/test\",\"train\":\"/opt/ml/input/data/train\"},\"current_host\":\"algo-1\",\"framework_module\":\"sagemaker_sklearn_container.training:main\",\"hosts\":[\"algo-1\"],\"hyperparameters\":{\"n_estimators\":100,\"random_state\":42},\"input_config_dir\":\"/opt/ml/input/config\",\"input_data_config\":{\"test\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"},\"train\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}},\"input_dir\":\"/opt/ml/input\",\"is_master\":true,\"job_name\":\"RF-custom-sklearn-2024-11-09-01-32-06-275\",\"log_level\":20,\"master_hostname\":\"algo-1\",\"model_dir\":\"/opt/ml/model\",\"module_dir\":\"s3://sagemaker-us-east-2-361769570735/RF-custom-sklearn-2024-11-09-01-32-06-275/source/sourcedir.tar.gz\",\"module_name\":\"script\",\"network_interface_name\":\"eth0\",\"num_cpus\":4,\"num_gpus\":0,\"output_data_dir\":\"/opt/ml/output/data\",\"output_dir\":\"/opt/ml/output\",\"output_intermediate_dir\":\"/opt/ml/output/intermediate\",\"resource_config\":{\"current_group_name\":\"homogeneousCluster\",\"current_host\":\"algo-1\",\"current_instance_type\":\"ml.m4.xlarge\",\"hosts\":[\"algo-1\"],\"instance_groups\":[{\"hosts\":[\"algo-1\"],\"instance_group_name\":\"homogeneousCluster\",\"instance_type\":\"ml.m4.xlarge\"}],\"network_interface_name\":\"eth0\"},\"user_entry_point\":\"script.py\"}\n",
+      "SM_MODULE_DIR=s3://sagemaker-us-east-2-361769570735/RF-custom-sklearn-2024-11-12-04-14-58-968/source/sourcedir.tar.gz\n",
+      "SM_TRAINING_ENV={\"additional_framework_parameters\":{},\"channel_input_dirs\":{\"test\":\"/opt/ml/input/data/test\",\"train\":\"/opt/ml/input/data/train\"},\"current_host\":\"algo-1\",\"framework_module\":\"sagemaker_sklearn_container.training:main\",\"hosts\":[\"algo-1\"],\"hyperparameters\":{\"n_estimators\":100,\"random_state\":42},\"input_config_dir\":\"/opt/ml/input/config\",\"input_data_config\":{\"test\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"},\"train\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}},\"input_dir\":\"/opt/ml/input\",\"is_master\":true,\"job_name\":\"RF-custom-sklearn-2024-11-12-04-14-58-968\",\"log_level\":20,\"master_hostname\":\"algo-1\",\"model_dir\":\"/opt/ml/model\",\"module_dir\":\"s3://sagemaker-us-east-2-361769570735/RF-custom-sklearn-2024-11-12-04-14-58-968/source/sourcedir.tar.gz\",\"module_name\":\"script\",\"network_interface_name\":\"eth0\",\"num_cpus\":4,\"num_gpus\":0,\"output_data_dir\":\"/opt/ml/output/data\",\"output_dir\":\"/opt/ml/output\",\"output_intermediate_dir\":\"/opt/ml/output/intermediate\",\"resource_config\":{\"current_group_name\":\"homogeneousCluster\",\"current_host\":\"algo-1\",\"current_instance_type\":\"ml.m4.xlarge\",\"hosts\":[\"algo-1\"],\"instance_groups\":[{\"hosts\":[\"algo-1\"],\"instance_group_name\":\"homogeneousCluster\",\"instance_type\":\"ml.m4.xlarge\"}],\"network_interface_name\":\"eth0\"},\"user_entry_point\":\"script.py\"}\n",
       "SM_USER_ARGS=[\"--n_estimators\",\"100\",\"--random_state\",\"42\"]\n",
       "SM_OUTPUT_INTERMEDIATE_DIR=/opt/ml/output/intermediate\n",
       "SM_CHANNEL_TEST=/opt/ml/input/data/test\n",
@@ -398,11 +396,13 @@
       "Test accuracy: 0.9534883720930233\n",
       "Test precision: 0.9534883720930233\n",
       "Test recall: 0.9814814814814815\n",
-      "2024-11-09 01:34:00,636 sagemaker-containers INFO     Reporting training SUCCESS\n",
+      "2024-11-12 04:16:52,864 sagemaker-containers INFO     Reporting training SUCCESS\n",
       "\n",
-      "2024-11-09 01:34:17 Completed - Training job completed\n",
-      "Training seconds: 95\n",
-      "Billable seconds: 95\n"
+      "2024-11-12 04:17:08 Training - Training image download completed. Training in progress.\n",
+      "2024-11-12 04:17:08 Uploading - Uploading generated training model\n",
+      "2024-11-12 04:17:08 Completed - Training job completed\n",
+      "Training seconds: 89\n",
+      "Billable seconds: 89\n"
      ]
     }
    ],
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -421,12 +421,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "2024-11-09 01:34:17 Starting - Preparing the instances for training\n",
-      "2024-11-09 01:34:17 Downloading - Downloading the training image\n",
-      "2024-11-09 01:34:17 Training - Training image download completed. Training in progress.\n",
-      "2024-11-09 01:34:17 Uploading - Uploading generated training model\n",
-      "2024-11-09 01:34:17 Completed - Training job completed\n",
-      "Model output path: s3://sagemaker-us-east-2-361769570735/RF-custom-sklearn-2024-11-09-01-32-06-275/output/model.tar.gz\n"
+      "2024-11-12 04:17:08 Starting - Preparing the instances for training\n",
+      "2024-11-12 04:17:08 Downloading - Downloading the training image\n",
+      "2024-11-12 04:17:08 Training - Training image download completed. Training in progress.\n",
+      "2024-11-12 04:17:08 Uploading - Uploading generated training model\n",
+      "2024-11-12 04:17:08 Completed - Training job completed\n",
+      "Model output path: s3://sagemaker-us-east-2-361769570735/RF-custom-sklearn-2024-11-12-04-14-58-968/output/model.tar.gz\n"
      ]
     }
    ],
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,23 +473,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model Endpoint=RandomForestClassifier-sklearn-model-2024-11-09-01-52-39\n"
+      "Model Endpoint=RandomForestClassifier-sklearn-model-2024-11-12-04-17-28\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:sagemaker:Creating model with name: RandomForestClassifier-sklearn-model-2024-11-09-01-52-37\n",
-      "INFO:sagemaker:Creating endpoint-config with name RandomForestClassifier-sklearn-model-2024-11-09-01-52-39\n",
-      "INFO:sagemaker:Creating endpoint with name RandomForestClassifier-sklearn-model-2024-11-09-01-52-39\n"
+      "INFO:sagemaker:Creating model with name: RandomForestClassifier-sklearn-model-2024-11-12-04-17-28\n",
+      "INFO:sagemaker:Creating endpoint-config with name RandomForestClassifier-sklearn-model-2024-11-12-04-17-28\n",
+      "INFO:sagemaker:Creating endpoint with name RandomForestClassifier-sklearn-model-2024-11-12-04-17-28\n"
      ]
     },
     {
@@ -513,26 +513,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test.drop('target', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'ResponseMetadata': {'RequestId': '0190d88e-1268-4ff8-9f3c-f6201f1a82fc',\n",
-       "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': '0190d88e-1268-4ff8-9f3c-f6201f1a82fc',\n",
-       "   'content-type': 'application/x-amz-json-1.1',\n",
-       "   'date': 'Sat, 09 Nov 2024 02:09:18 GMT',\n",
-       "   'content-length': '0'},\n",
-       "  'RetryAttempts': 0}}"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 0]\n"
+     ]
     }
    ],
+   "source": [
+    "print(predictor.predict(X_test[0:2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deleting endpoint cause money"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "sm_boto3.delete_endpoint(EndpointName=endpoint_name)"
    ]
